--- a/resources/directives/archived-doc-list.html
+++ b/resources/directives/archived-doc-list.html
@@ -1,4 +1,4 @@
-<div class="bs-component bs-doc-pane" ng-controller="ArchivedDocListController as listCtrl">
+<div class="bs-component bs-doc-pane">
 	<div class="panel panel-primary">
 		<div class="panel-body">
 			<a class="btn btn-primary btn-xs panel-top-right-button" ng-click="listCtrl.updateView(true)" title="Refresh"><span class="glyphicon glyphicon-refresh"></span></a>
